erDiagram
    %% ============================================
    %% MODULE 1: AUTHENTICATION & USER MANAGEMENT
    %% ============================================
    USERS ||--o{ ROLES : "has"
    USERS {
        bigint user_id PK
        varchar email UK "unique"
        varchar password_hash
        varchar phone
        varchar first_name
        varchar last_name
        enum role "guest|customer|organizer|staff|admin"
        datetime created_at
        datetime updated_at
        tinyint is_active
    }

    ROLES {
        int role_id PK
        varchar role_name "unique"
        text permissions
    }

    %% ============================================
    %% MODULE 2: EVENTS MANAGEMENT
    %% ============================================
    USERS ||--o{ EVENTS : "creates"
    EVENTS ||--o{ SEAT_MAPS : "has"
    EVENTS {
        bigint event_id PK
        varchar title
        text description
        varchar location
        datetime start_time
        datetime end_time
        enum status "draft|published|cancelled|completed"
        bigint organizer_id FK "→ users(user_id)"
        datetime created_at
        datetime updated_at
    }

    SEAT_MAPS ||--o{ SEATS : "contains"
    SEAT_MAPS {
        bigint seat_map_id PK
        bigint event_id FK "→ events(event_id)"
        varchar zone_name "VIP, Standard, etc"
        int total_seats
        decimal price
        enum status "available|full|cancelled"
        datetime created_at
    }

    SEATS {
        bigint seat_id PK
        bigint seat_map_id FK "→ seat_maps(seat_map_id)"
        varchar seat_code "A1, B2, etc"
        enum status "available|reserved|used"
        datetime locked_until "for reservation timeout"
        datetime created_at
    }

    %% ============================================
    %% MODULE 3: BOOKING & RESERVATION
    %% ============================================
    USERS ||--o{ BOOKINGS : "makes"
    EVENTS ||--o{ BOOKINGS : "has_bookings"
    BOOKINGS ||--o{ TICKETS : "generates"
    BOOKINGS {
        bigint booking_id PK
        bigint user_id FK "→ users(user_id)"
        bigint event_id FK "→ events(event_id)"
        enum status "pending|confirmed|expired|cancelled"
        int quantity
        decimal total_amount
        datetime created_at
        datetime expires_at
        datetime updated_at
    }

    TICKETS ||--o{ SEATS : "assigned_to"
    TICKETS {
        bigint ticket_id PK
        bigint booking_id FK "→ bookings(booking_id)"
        bigint seat_id FK "→ seats(seat_id)"
        varchar ticket_code "unique identifier"
        varchar qr_token "unique for scanning"
        enum status "active|used|voided"
        datetime created_at
    }

    %% ============================================
    %% MODULE 4: PAYMENT & REFUND
    %% ============================================
    BOOKINGS ||--o{ PAYMENTS : "requires"
    PAYMENTS ||--o{ REFUNDS : "may_have"
    PAYMENTS {
        bigint payment_id PK
        bigint booking_id FK "→ bookings(booking_id)"
        decimal amount
        varchar payment_method "card|bank_transfer|cash"
        enum status "pending|success|failed|cancelled"
        varchar transaction_ref
        datetime paid_at
        datetime created_at
    }

    REFUNDS {
        bigint refund_id PK
        bigint payment_id FK "→ payments(payment_id)"
        decimal amount
        enum status "requested|approved|processing|completed"
        text reason
        datetime requested_at
        datetime completed_at
    }

    %% ============================================
    %% MODULE 5: CHECK-IN & ATTENDANCE
    %% ============================================
    TICKETS ||--o{ CHECKINS : "has_history"
    STAFF ||--o{ CHECKINS : "performs"
    CHECKINS {
        bigint checkin_id PK
        bigint ticket_id FK "→ tickets(ticket_id)"
        bigint staff_id FK "→ users(user_id)"
        datetime checkin_time
        tinyint is_online "1=online|0=offline"
        int device_id "device used for checkin"
        datetime created_at
    }

    TICKETS ||--o{ OFFLINE_CHECKIN_QUEUE : "pending_sync"
    OFFLINE_CHECKIN_QUEUE {
        bigint queue_id PK
        varchar ticket_code
        int device_id FK
        enum sync_status "pending|synced|conflict|invalid"
        datetime created_at
        datetime synced_at
        text conflict_note
    }

    %% ============================================
    %% MODULE 6: NOTIFICATION
    %% ============================================
    USERS ||--o{ NOTIFICATIONS : "receives"
    NOTIFICATIONS {
        bigint notification_id PK
        bigint user_id FK "→ users(user_id)"
        varchar title
        text body
        varchar type "email|sms|push"
        tinyint is_read
        datetime created_at
        datetime read_at
    }

    %% ============================================
    %% MODULE 7: STAFF MANAGEMENT
    %% ============================================
    USERS ||--o{ STAFF : "has_staff_record"
    EVENTS ||--o{ STAFF_ASSIGNMENTS : "assigns_staff"
    STAFF {
        bigint staff_id PK
        bigint user_id FK "→ users(user_id)"
        varchar department
        varchar shift
        tinyint is_active
        datetime hired_date
        datetime created_at
    }

    STAFF_ASSIGNMENTS {
        bigint assignment_id PK
        bigint event_id FK "→ events(event_id)"
        bigint staff_id FK "→ users(user_id)"
        bigint assigned_by FK "→ users(user_id)"
        varchar role "security|cashier|support"
        datetime assigned_at
    }

    %% ============================================
    %% MODULE 8: REPORTING & ANALYTICS
    %% ============================================
    EVENTS ||--o{ ATTENDANCE_STATS : "generates_stats"
    ATTENDANCE_STATS {
        bigint stats_id PK
        bigint event_id FK "→ events(event_id)"
        int total_tickets_sold
        int total_checkins
        int total_no_shows
        int total_refunds
        decimal revenue
        datetime calculated_at
    }

